@@ -728,9 +728,11 @@ ok_player_name(const char *name, dbref player, dbref thing)
 
   /* A player may only change to a forbidden name if they're already
      using that name. */
-  if (forbidden_name(name)
-      && !(GoodObject(player) && (Wizard(player) || (lookup == thing))))
-    return 0;
+  if (forbidden_name(name)) {
+    if (!((GoodObject(player) && Wizard(player)) || (GoodObject(thing) && lookup == thing))) {
+      return 0;
+    }
+  }
 
   return ((lookup == NOTHING) || (lookup == thing));
 }
